<resources>
    <string name="app_name">BankingControl</string>
    <string name="descricao">Descrição</string>
    <string name="tipo">Tipo</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="digite_selecione_uma_data">Digite/Selecione uma data</string>
    <string name="_0_00">0.00</string>
    <string name="lan_amento">Lançamento</string>
    <string name="saldo">Saldo</string>
    <string name="sal_rio">Salário</string>
    <string name="_100_00">100,00</string>
    <string name="r">R$</string>
    <string name="receber">+ Receber</string>
    <string name="pagar">- Pagar</string>
</resources>